the dropdown menu will no longer overlay the title bar nor the navbar (increase the z-index of titile bar and navbar, correct the former modification)

--- a/webapp/assets/scss/funtown.scss
+++ b/webapp/assets/scss/funtown.scss
@@ -109,10 +109,6 @@ label{
 	// }
 }
 
-.dropdown-menu{
-	z-index: 10;
-}
-
 .dropdown-menu > li{
 	padding: 0px!important;
 }
@@ -251,6 +247,10 @@ main{
 
 }
 
+.search-box .dropdown-menu{
+	z-index: 1002;
+}
+
 .navbar{
 	position: fixed;
 	z-index: 999;
@@ -289,6 +289,11 @@ main{
 	}
 	
 }
+
+.navbar.navbar-default[role="navigation"], .ft-header {
+  z-index: 1001;
+}
+
 nav[role="navigation"] > div.collapse {
   display: block;
 }
